--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "axios": "^0.21.1",
     "d3": "^6.6.0",
     "lodash": "^4.17.21",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-hanger": "^2.3.2",
     "react-hook-form": "^6.15.5",
-    "react-is": "^17.0.1",
+    "react-is": "^17.0.2",
     "react-redux": "^7.1.3",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
