--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-is": "^17.0.2",
     "react-redux": "^7.1.3",
     "react-scripts": "4.0.3",
+    "react-use-dimensions": "^1.2.1",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1",
     "typescript": "^4.2.2"
