--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "d3": "^6.6.0",
     "lodash": "^4.17.21",
+    "normalizr": "^3.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hanger": "^2.3.2",
