--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^7.1.3",
     "react-scripts": "4.0.3",
     "react-use-dimensions": "^1.2.1",
+    "recharts": "^2.0.9",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1",
     "typescript": "^4.2.2"
