--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
     "d3": "^6.6.0",
+    "date-fns": "^2.19.0",
     "lodash": "^4.17.21",
     "normalizr": "^3.6.1",
     "react": "^17.0.2",
