--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@reduxjs/toolkit": "^1.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -12,13 +13,16 @@
     "date-fns": "^2.19.0",
     "lodash": "^4.17.21",
     "normalizr": "^3.6.1",
+    "rc-slider": "^9.7.2",
     "react": "^17.0.2",
+    "react-compound-slider": "^3.3.1",
     "react-dom": "^17.0.2",
     "react-hanger": "^2.3.2",
     "react-hook-form": "^6.15.5",
     "react-is": "^17.0.2",
     "react-redux": "^7.1.3",
     "react-scripts": "4.0.3",
+    "react-timeline-range-slider": "^1.3.0",
     "react-use-dimensions": "^1.2.1",
     "recharts": "^2.0.9",
     "redux": "^4.0.5",
