--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
 
             - run:
                 name: Deploy to S3
-                command: aws s3 sync build s3://covid-data.ianplumb.uk --delete
+                command: aws s3 sync build s3://covid-data.nonzeronucleus.com --delete
 
 
     build-only:
@@ -96,7 +96,7 @@ jobs:
 
             - run:
                 name: Deploy to S3
-                command: aws s3 sync build s3://covid-data.ianplumb.uk" --delete
+                command: aws s3 sync build s3://covid-data.nonzeronucleus.com" --delete
 
 #            - run:
 #                name: Enable preview
@@ -123,7 +123,7 @@ jobs:
 
             - run:
                 name: Deploy to S3
-                command: aws s3 sync build s3://covid-data.ianplumb.uk --delete
+                command: aws s3 sync build s3://covid-data.nonzeronucleus.com --delete
 
 workflows:
   version: 2
