--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "rc-slider": "^9.7.2",
     "react": "^17.0.2",
     "react-compound-slider": "^3.3.1",
+    "react-cookie-consent": "^6.2.3",
     "react-dom": "^17.0.2",
     "react-hanger": "^2.3.2",
     "react-hook-form": "^6.15.5",
